[package]
name = "ntlmclient"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"
description = "Simple NTLM client library for Rust."
repository = "https://github.com/RavuAlHemio/ntlmclient"
keywords = ["ntlm"]

[dependencies]
bitflags = { version = "2.4" }
chrono = { version = "0.4" }
cipher = { version = "0.4" }
des = { version = "0.8" }
digest = { version = "0.10" }
hmac = { version = "0.12" }
md4 = { version = "0.10" }
md-5 = { version = "0.10" }
rand = { version = "0.8" }

[dev-dependencies]
base64 = { version = "0.21" }
reqwest = { version = "0.11", features = ["cookies"] }

[target.'cfg(windows)'.dependencies.windows]
version = "0.51"
features = [
    "Win32_Globalization",
]
